Further fix social media icon colors in dark mode

--- a/less/hux-blog.less
+++ b/less/hux-blog.less
@@ -745,7 +745,7 @@ footer {
   }
   .fa-stack {
     .fa-circle {
-      color: @gray-dark;
+      color: @gray-light;
     }
     .fa-inverse {
       color: #1a1a1a;
